--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
 
   # Database
   sqflite: ^2.2.8+4
-  sqflite_common_ffi: ^2.3.0
+  sqflite_common_ffi: ^2.1.1+1
   path: ^1.8.2
   
   # UI components
